routing and lazy loading

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,5 +7,8 @@
             {{product.name}}
         </li>
     </ul>-->
+    <!--
     <app-shop></app-shop>
+    -->
+    <router-outlet></router-outlet>
 </div>
