--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,14 @@
-<app-nav-bar></app-nav-bar>
+<ngx-spinner>
+    <h3>Loading...</h3>
 
-<div class="container" style="margin-top: 140px;">
+</ngx-spinner>
+
+
+<app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
+
+
+<div >
     <!--<h1>Welcome to {{title}}</h1>-->
     <!--<ul>
         <li class="list-unstyled" *ngFor="let product of products">
