--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -14,12 +14,15 @@
 a {
     text-decoration: none;
     color: #343a40;
+
     &.active {
-        color: orange;
+        color: orange
     }
 }
+
 .logo {
     cursor: pointer;
+
     &:focus {
         outline: none;
     }
